AM_CPPFLAGS = \
	-I ${top_srcdir}/libop \
	-I ${top_srcdir}/libutil \
	-I ${top_srcdir}/libdb \
	-I ${top_srcdir}/libopt++ \
	-I ${top_srcdir}/libutil++ \
	-I ${top_srcdir}/libop++ \
	-I ${top_srcdir}/libregex

noinst_LIBRARIES = libpp.a
libpp_a_SOURCES = \
	derive_files.cpp \
	derive_files.h \
	filename_spec.cpp \
	filename_spec.h \
	format_output.cpp \
	format_output.h \
	parse_cmdline.cpp \
	parse_cmdline.h \
	partition_files.h \
	partition_files.cpp \
	profile.cpp \
	profile.h \
	profile_container.cpp \
	profile_container.h \
	sample_container.cpp \
	sample_container.h \
	session.cpp \
	session.h \
	split_sample_filename.cpp \
	split_sample_filename.h \
	symbol_container.cpp \
	symbol_container.h \
	symbol_functors.cpp \
	symbol_functors.h \
	outsymbflag.h \
	opp_symbol.h
