AM_CPPFLAGS=-I ${top_srcdir}/libutil

noinst_LIBRARIES = libutil++.a
libutil___a_SOURCES = \
	op_bfd.cpp \
	op_bfd.h \
	file_manip.cpp \
	file_manip.h \
	string_manip.cpp \
	string_manip.h \
	filename_match.cpp \
	filename_match.h \
	cverb.cpp \
	cverb.h \
	generic_spec.cpp \
	generic_spec.h \
	op_exception.cpp \
	op_exception.h \
	child_reader.cpp \
	child_reader.h \
	utility.h \
	comma_list.h

